feat: update default font
fix: `nemo-git` to `nemo`

chore: update script

--- a/configs/.config/wlogout/style.css
+++ b/configs/.config/wlogout/style.css
@@ -1,7 +1,7 @@
 * {
   background-image: none;
   transition: 200ms;
-  font-family: "Inter";
+  font-family: "Noto Sans";
 }
 
 @import "$HOME/.config/waybar/themes/theme.css";
